@startuml

class Calculator {
    private int index_r;

    public Calculator();
    public void solve(String operation);
    public String toString();
} 

class BackupCalculator {
    public BackupCalculator(int memorySize);
    public void save();
}

class TextFile {
    private BufferedWriter fW_;
    private BufferedReader fR_;
    private char mode_;

    public void open(String filename, String mode) throws IOException;
    public void close() throws IOException;
    public String read() throws IOException;
    public void write(String s) throws IOException;
}

class UdpSender {
    private int port_;

    public UdpSender(int port);
    public void send(String destination, String message);
}

class UdpReceiver {
    private int port_;

    public UdpReceiver(int port);
    public String receive();
}

Operation <|-down- MathematicalOperation: Inheritance
Calculator "1" *-up- "*" MathematicalOperation: operations
BackupCalculator "1" *-up- "1" TextFile: ft
Calculator <|-down- BackupCalculator: Inheritance
BackupCalculator "1" *-up- "1" UdpSender: sender
BackupCalculator "1" *-up- "1" UdpReceiver: receiver

@enduml